--- a/CrossTop/app1/templates/product_detail.html
+++ b/CrossTop/app1/templates/product_detail.html
@@ -71,9 +71,9 @@
    <tr>
       <th scope="row">В наличии:</th>
        {% if product.in_available %}
-      <td><img src="{{logo1.image.url}}"width="20"></td>
+      <td><img src="/media/logo_access.png"width="20"></td>
        {% else %}
-       <td><img src="{{logo2.image.url}}"width="20"></td>
+       <td><img src="/media/logo3.png"width="20"></td>
        {% endif %}
     </tr>
   </tbody>
