--- a/CrossTop/app1/templates/base.html
+++ b/CrossTop/app1/templates/base.html
@@ -1,26 +1,36 @@
+{% load static %}
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-    {% block title %}
-    <title>Shop Homepage - Start Bootstrap Template</title>
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
-    <!-- Core theme CSS (includes Bootstrap)-->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    {% block head %}
+    {% endblock head %}
+    {% block title %}
+    <title>Shop Homepage - Start Bootstrap Template</title>
     {% endblock title %}
+
+
+
 </head>
 <body>
 <!-- Navigation-->
 
-
 <nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top container">
 
     <a class="navbar-brand" href="{% url 'base' %}"><font size="6" color="white">Cross Top</font></a>
+    <form action="{% url 'catalog'  %}" method="GET" class="mt-2" >
+        {{ navbar_filter.form.name }}
+        <button type="submit" class="btn btn-outline-primary">Поиск</button>
+    </form>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -28,24 +38,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-
-
         </ul>
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown">
-                <div class="dropdown">
-                    <a class="btn btn-dark dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                       data-bs-toggle="dropdown" aria-expanded="false">
-                        Поиск по брендам:
-                    </a>
 
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        {% for brand in brands %}
-                        <li><a class="dropdown-item" href="#">{{brand.name}}</a></li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </li>
 
             {% if request.user.is_authenticated %}
             <li class="nav-item nav-link">
@@ -86,25 +81,28 @@
 
 
 <div class="container mt-5">
-    {% block side_bar %}
+
     <div class="row">
         <div class="col-lg-3 mt-5">
-            <h1 class="my-4"><img src="{{logo.image.url}}" class="img-fluid"></h1>
-            <div class="list-group">
 
+            <h1 class="my-4"><img src="/media/logo1.png" class="img-fluid"></h1>
+
+            <div class="btn-group-vertical container">
+                <a type="button" class="btn btn-primary btn-lg" href="{% url 'catalog' %}">Смотреть все товары</a>
                 {% for category in categories %}
                 {% if category.slug in request.path %}
-                <a class="list-group-item active bg-dark " aria-current="true"
-                   href="{% url 'category_detail' slug=category.slug %}">{{category.name}}</a>
+                <a type="button" class="btn btn-outline-dark btn-lg active"  href="{% url 'category_detail' slug=category.slug %}">{{category.name}}</a>
                 {% else %}
-                <a class="list-group-item " href="{% url 'category_detail' slug=category.slug %}">{{category.name}}</a>
+                <a type="button" class="btn btn-outline-dark btn-lg" href="{% url 'category_detail' slug=category.slug %}">{{category.name}}</a>
                 {% endif %}
 
-                {% endfor %}
 
+                {% endfor %}
             </div>
+            {% block side_bar %}
+            {% endblock side_bar %}
         </div>
-        {% endblock side_bar %}
+
 
         <div class="col-lg-9 mt-3">
             <div class="row">
@@ -180,20 +178,11 @@
     </div>
 </div>
 <!-- Footer-->
-<footer class="py-5 bg-dark">
+<footer class="py-5 bg-dark mt-4">
     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
 </footer>
-<!-- Bootstrap core JS-->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-
-<!-- Core theme JS-->
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script>
-<script type="text/javascript">
-   var a = "{{someDjangoVariable}}";
-
-</script>
 </body>
+
+{% block script %}
+{% endblock script %}
 </html>
