--- a/CrossTop/app1/templates/products_by_category.html
+++ b/CrossTop/app1/templates/products_by_category.html
@@ -1,15 +1,84 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
+{% block head %}
+
+   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script>
+  $( function() {
+    $( "#slider-range" ).slider({
+      range: true,
+      min: 0,
+      max: 3500,
+      values: [ 300, 1500 ],
+      slide: function( event, ui ) {
+        $( "#min_price" ).val(ui.values[ 0 ]) + $( "#max_price" ).val(ui.values[ 1 ]);
+      }
+    });
+
+  });
+  </script>
+{% endblock head %}
+
+{% block side_bar %}
+
+<br><br>
+<form method="GET">
+    {{ filter.form|crispy}}
+    <div class="row">
+    <div class="col-md-2 mt-2">Цена</div>
+    <div class="col-md-5 mt-2"><input class="form-control " placeholder="от" type="text" id="min_price" name="min_price" /></div>
+        <div class="col-md-5 mt-2"><input class="form-control " placeholder="до" type="text" id="max_price" name="max_price" /></div>
+    </div>
+    <div class="mt-3 mb-3" id="slider-range"></div>
+    <div class="d-grid gap-2">
+    <button type="submit" class="btn btn-primary">Поиск</button>
+    </div>
+</form>
+{% endblock side_bar %}
 
 {% block content %}
 <ol class="breadcrumb ">
     <li class="breadcrumb-item "><a class="link-dark" href="{% url 'base' %}">Главная</a></li>
-      <li class="breadcrumb-item active">{{category.name}}</a></li>
+    <li class="breadcrumb-item active">{{category.name}}</a></li>
 
-  </ol>
-<div class="container">
-  <div class="row">
-{% for product in products %}
-<div class="col mt-3">
+</ol>
+<label>Сортировка по цене:</label>
+<div class="btn-group btn-group-sm">
+<button class='btn btn-outline-dark' id="cheap_at_first">По возрастанию</button>
+<button class='btn btn-outline-dark' id="expensive_at_first">По убыванию</button>
+</div>
+<div class="container test">
+  <div class="row not_order_by">
+    {% if not filter.qs %} Нету подходящих товаров
+    {% else %}
+
+{% for product in filter.qs %}
+<div class="col mt-3 ">
+<div class="card" style="width: 18rem;">
+
+  <a href="{% url 'product_detail' slug=product.slug %}"><img src="{{product.main_photo.url}}" class="card-img-top" alt="..."></a>
+  <div class="card-body">
+    <h5 class="card-title"><a  class="link-dark text-decoration-none" href="{% url 'product_detail' slug=product.slug %}"> {{product.name}}</a></h5>
+
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item text-center">Фирма:   ----<strong>{{product.brand.name}}</strong>----</li>
+    <li class="list-group-item text-center">Сезон:   ----<strong>{{product.season}}</strong>----</li>
+    <li class="list-group-item text-center">Размер:----<strong>{{product.size}} eur</strong>----</li>
+    <li class="list-group-item text-center">Цена: ----<strong>{{product.price}} грн.</strong>----</li>
+  </ul>
+  <div class="card-body  text-center">
+    <a href="{% url 'add_to_cart' slug=product.slug %}" class="btn btn-success">Добавить в корзину</a>
+  </div>
+</div></div>
+  {% endfor %} {% endif %}
+  </div>
+
+  <div class="row order_by_cheap_first" style="display:none">
+
+{% for product in expensive_first.qs %}
+<div class="col mt-3 ">
 <div class="card" style="width: 18rem;">
 
   <a href="{% url 'product_detail' slug=product.slug %}"><img src="{{product.main_photo.url}}" class="card-img-top" alt="..."></a>
@@ -28,8 +97,82 @@
   </div>
 </div>
 
-</div>
-{% endfor %}
+</div>{% endfor %}
+
+
     </div>
+
+  <div class="row order_by_expensive_first" style="display:none">
+
+{% for product in cheap_first.qs %}
+<div class="col mt-3 ">
+<div class="card" style="width: 18rem;">
+
+  <a href="{% url 'product_detail' slug=product.slug %}"><img src="{{product.main_photo.url}}" class="card-img-top" alt="..."></a>
+  <div class="card-body">
+    <h5 class="card-title"><a  class="link-dark text-decoration-none" href="{% url 'product_detail' slug=product.slug %}"> {{product.name}}</a></h5>
+
   </div>
-{% endblock content %}
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item text-center">Фирма:   ----<strong>{{product.brand.name}}</strong>----</li>
+    <li class="list-group-item text-center">Сезон:   ----<strong>{{product.season}}</strong>----</li>
+    <li class="list-group-item text-center">Размер:----<strong>{{product.size}} eur</strong>----</li>
+    <li class="list-group-item text-center">Цена: ----<strong>{{product.price}} грн.</strong>----</li>
+  </ul>
+  <div class="card-body  text-center">
+    <a href="{% url 'add_to_cart' slug=product.slug %}" class="btn btn-success">Добавить в корзину</a>
+  </div>
+</div>
+
+</div>{% endfor %}
+
+
+    </div>
+
+  </div>
+{% for product in products %}
+<p>{{product}}</p>
+{% endfor %}
+
+{% endblock %}
+
+{% block script %}
+	<script type="text/javascript">
+        $(document).ready(function () {
+
+         $('#cheap_at_first').on("click", function(){
+
+			$.ajax({ url: "",
+
+				success: function (data, status, xhr) {
+						$('.not_order_by').hide();
+						$('.order_by_cheap_first').show();
+						$('.order_by_expensive_first').hide();
+				}
+			});
+
+		 });
+
+        });
+        </script>
+<script>
+
+ $(document).ready(function () {
+
+         $('#expensive_at_first').on("click", function(){
+
+			$.ajax({ url: "",
+
+				success: function (data, status, xhr) {
+						$('.not_order_by').hide();
+						$('.order_by_cheap_first').hide();
+						$('.order_by_expensive_first').show();
+
+
+				}
+			});
+		 });
+        });
+    </script>
+
+{% endblock %}
